# PROJETO_SENSOR_VIBRACAO

./: app.py  arq.txt  dados_vibracao.csv  home.py  pyproject.toml  requirements.txt
arduino/mpu-6050/: mpu-6050.ino
componentes/: grafico_home.py
dados/: dados_aceleracao_giro-2026-07-13_19-56-36.csv  dados_aceleracao_giro-2026-07-13_20-37-15.csv  dados_aceleracao_giro-2026-07-16_22-13-24.csv
dialogo_arduino/: coletor.py  gravador.py  serial_reader.py
pages/: 2_Dados.py
realtime/: __init__.py  gráfico.py  janela.py  main.py
sensor/: arq.txt  buffers.py  coletor.py  gravador.py  manager.py  serial_reader.py  teste_manager.py
utils/debug/: tracer.py
