[project]
name = "projeto-sensor-vibracao"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "py>=1.11.0",
    "pyserial>=3.5",
    "streamlit>=1.57.0",
    "streamlit-autorefresh>=1.0.1",
    "streamlit-echarts>=0.7.0",
]
